--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <hr/>
         <p>if you want to go to hello click on the below link</p>
-        <a href="/hello.html">  Hello</a>
+        <a href="../hello.html">  Hello</a>
         <hr/>
         <img 
         src="https://i.pinimg.com/564x/c0/47/9e/c0479e7b7008e723283032c3edc35444.jpg"
@@ -30,11 +30,11 @@
         <hr/>
         <hr/>
     <p>if you want to know about square values click on the below link</p>
-    <a href="/maths.html">Go to maths </a>
+    <a href="../maths.html">Go to maths </a>
     <hr/>
     <p>
         if you want to know about the atomic weights ,then click on the below link<br>
-        <a href="/chemistry.html"> atomic weights</a>
+        <a href="../chemistry.html"> atomic weights</a>
     </p>
     <hr/>
     <p>about my profile
